compiler/fir/analysis-tests/testData/resolve/checkers/useBeforeStaticInitialization/unwrappedDependencies.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL

class C(val x: String)

<!POSSIBLE_INITIALIZATION_DEADLOCK!>object A<!> {
    <!POTENTIALLY_UNINITIALIZED_PROPERTY!>val a = C(<!POTENTIALLY_UNINITIALIZED_ACCESSES!>B.x<!>)<!>
    <!POTENTIALLY_UNINITIALIZED_PROPERTY!>val b = C(<!POTENTIALLY_UNINITIALIZED_ACCESSES!>a<!>.x)<!>
}

<!POSSIBLE_INITIALIZATION_DEADLOCK!>object B<!> {
    <!POTENTIALLY_UNINITIALIZED_PROPERTY!>val x: String = <!POTENTIALLY_UNINITIALIZED_ACCESSES!>A.b.x<!><!>
}
